# python-url-shortener

./: .gitignore  README.md  pyproject.toml
url_shortener/: __init__.py  cli.py  config.py  shortener.py
url_shortener/storage/: __init__.py  base_storage.py  json_storage.py  sql_storage.py
